--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -1,5 +1,11 @@
 % ************************** Thesis Abstract *****************************
 % Use `abstract' as an option in the document class to print only the titlepage and the abstract.
 \begin{abstract}
-This is where you write your abstract ...
+The newly discovered multicellular choanoflagellate Choanoeca flexa forms a curved sheet that undergoes a functional, light-triggered inversion. This change in orientation that allows the organism to reversibly switch between efficient swimming and feeding shapes provides an opportunity to study biological exploitation of geometry in an evolutionarily basal context. I sought to model the mechanics that produce this apparent bistability and the dynamics of the active transformation between the two states. 
+
+In this work, I approach the modeling problem from complementary continuous and discrete mechanics perspectives. Since radial expansion and contraction at a given latitude require azimuthal stretching and shrinking, a one-dimensional filament model does not capture the energetic barriers encountered by the sheet during the transition. Using energy functional variation, I solve for the forces acting throughout the sheet and derive corresponding equilibrium shape equations. Both views establish that C. flexa inversion can be hindered in sufficiently large sheets by cell collars connecting adjacent cells stretching. 
+    
+Comparisons between the discrete model for C. flexa mechanics and previously published experimental results support that collar stretching at the edges interferes in sheet inversion. Treating the organism as a crystal lattice defined by cells and cell-cell interactions, we recognise that the graph degree of cells plays a substantial role in overall sheet curvature and ability to invert. 
+    
+My results suggest that the graph topology of the cell-cell interface network must accommodate inversion, particularly at the edge of the sheet. Future work should image C. flexa flipping and observe changes in connectivity that accompany the transition. My results link graph topology with a notion of surface curvature through established ideas in the theory of crystal structure.
 \end{abstract}
