--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -3,7 +3,7 @@
 \begin{acknowledgements}      
 
 
-And I would like to acknowledge ...
+And I would like to acknowledge ... \mynote{acknowledge people!}
 
 
 \end{acknowledgements}
