--- a/Declaration/declaration.tex
+++ b/Declaration/declaration.tex
@@ -5,11 +5,11 @@
 I hereby declare that except where specific reference is made to the work of 
 others, the contents of this dissertation are original and have not been 
 submitted in whole or in part for consideration for any other degree or 
-qualification in this, or any other university. This dissertation is my own 
-work and contains nothing which is the outcome of work done in collaboration 
-with others, except as specified in the text and Acknowledgements. This 
-dissertation contains fewer than 65,000 words including appendices, 
-bibliography, footnotes, tables and equations and has fewer than 150 figures.
+qualification in this, or any other university. This thesis is my own 
+work and includes nothing which is the outcome of work done in collaboration 
+except where specifically indicated in the text. This 
+thesis contains fewer than 15,000 words including appendices, 
+bibliography, footnotes, and tables. 
 
 % Author and date will be inserted automatically from thesis.tex \author \degreedate
 
