--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,18 +1,18 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Writing your PhD thesis in \texorpdfstring{\\ \LaTeX2e}{LaTeX2e}}
+\title{Geometry and shape inversion in Choanoeca flexa}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
 
 %% Subtitle (Optional)
-\subtitle{Using the CUED template}
+%\subtitle{Using the CUED template}
 
 %% The full name of the author
-\author{Krishna Kumar}
+\author{Adam Konkol}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
-\dept{Department of Engineering}
+\dept{Department of Physics}
 
 %% University and Crest
 \university{University of Cambridge}
@@ -29,8 +29,7 @@
 
 %% Supervisor (optional)
 %% for multiple supervisors, append each supervisor with the \newline command
-%\supervisor{Prof. A.B. Supervisor\newline
-%Prof. C.D. Supervisor}
+%\supervisor{Prof. R.E. Goldstein}
 
 %% Supervisor Role (optional) - Supervisor (default) or advisor
 % \supervisorrole{\textbf{Supervisors: }}
@@ -42,8 +41,7 @@
 
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
-%\advisor{Dr. A. Advisor\newline
-%Dr. B. Advisor}
+\advisor{Dr. R. E. Goldstein}
      
 %% Advisor Role (optional) - Advisor (default) or leave empty
 % \advisorrole{Advisors: }
@@ -60,15 +58,15 @@
 %\renewcommand{\submissiontext}{change the default text here if needed}
 
 %% Full title of the Degree
-\degreetitle{Doctor of Philosophy}
+\degreetitle{Master of Philosophy}
 
 %% College affiliation (optional)
-\college{King's College}
+\college{Churchill College}
 
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
 %\degreedate{September 2014} 
 
 %% Meta information
-\subject{LaTeX} \keywords{{LaTeX} {PhD Thesis} {Engineering} {University of
+\subject{LaTeX} \keywords{{LaTeX} {MPhil Thesis} {Physics} {University of
 Cambridge}}
