adding intro citations

--- a/References/references.bib
+++ b/References/references.bib
@@ -34,3 +34,95 @@
   year={2010},
   publisher={APS}
 }
+
+@article{larson2020,
+  title={Biophysical principles of choanoflagellate self-organization},
+  author={Larson, Ben T and Ruiz-Herrero, Teresa and Lee, Stacey and Kumar, Sanjay and Mahadevan, L and King, Nicole},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={117},
+  number={3},
+  pages={1303--1311},
+  year={2020},
+  publisher={National Acad Sciences}
+}
+
+@article{kirkegaard2016,
+  title={Filter-feeding, near-field flows, and the morphologies of colonial choanoflagellates},
+  author={Kirkegaard, Julius B and Goldstein, Raymond E},
+  journal={Physical Review E},
+  volume={94},
+  number={5},
+  pages={052401},
+  year={2016},
+  publisher={APS}
+}
+
+@article{mah2014,
+  title={Choanoflagellate and choanocyte collar-flagellar systems and the assumption of homology},
+  author={Mah, Jasmine L and Christensen-Dalsgaard, Karen K and Leys, Sally P},
+  journal={Evolution \& development},
+  volume={16},
+  number={1},
+  pages={25--37},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{michelin2011,
+  title={Optimal feeding is optimal swimming for all P{\'e}clet numbers},
+  author={Michelin, S{\'e}bastien and Lauga, Eric},
+  journal={Physics of Fluids},
+  volume={23},
+  number={10},
+  pages={101901},
+  year={2011},
+  publisher={American Institute of Physics}
+}
+
+@article{asadzadeh2019,
+  title={Hydrodynamics of the leucon sponge pump},
+  author={Asadzadeh, Seyed Saeed and Larsen, Poul S and Riisg{\aa}rd, Hans Ulrik and Walther, Jens H},
+  journal={Journal of the Royal Society Interface},
+  volume={16},
+  number={150},
+  pages={20180630},
+  year={2019},
+  publisher={The Royal Society}
+}
+
+@article{carr2008,
+  title={Molecular phylogeny of choanoflagellates, the sister group to Metazoa},
+  author={Carr, Martin and Leadbeater, Barry SC and Hassan, R and Nelson, M and Baldauf, Sandra L},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={105},
+  number={43},
+  pages={16641--16646},
+  year={2008},
+  publisher={National Acad Sciences}
+}
+
+@article{alegado2012,
+  title={A bacterial sulfonolipid triggers multicellular development in the closest living relatives of animals},
+  author={Alegado, Rosanna A and Brown, Laura W and Cao, Shugeng and Dermenjian, Renee K and Zuzow, Richard and Fairclough, Stephen R and Clardy, Jon and King, Nicole},
+  journal={elife},
+  volume={1},
+  year={2012},
+  publisher={eLife Sciences Publications, Ltd}
+}
+
+@article{leadbeater2008,
+  title={Choanoflagellate evolution: the morphological perspective},
+  author={Leadbeater, Barry S. C.},
+  journal={Protistology},
+  volume={5},
+  issue={4},
+  year={2008},
+  pages={256--267},
+}
+
+@book{lauterborn1898,
+  title={Protozo{\"e}n-Studien: IV. T. Flagellaten aus dem Gebiete des Oberrheins. Aus dem Zoologischen Institut der Universit{\"a}t Heidelberg.(M. 2 Taf.).},
+  author={Lauterborn, Robert},
+  year={1898},
+  publisher={A. Lauterborn}
+}
