add/discuss landscape

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -50,6 +50,8 @@
 %\usepackage{algpseudocode}
 \usepackage{bm}
 \newcommand{\e}{\mathcal{E}}
+\newcommand{\bh}[1]{\hat{\bm{#1}}}
+\DeclareMathOperator{\sgn}{sgn}
 
 % ********************Captions and Hyperreferencing / URL **********************
 
