--- a/References/references.bib
+++ b/References/references.bib
@@ -126,3 +126,84 @@
   year={1898},
   publisher={A. Lauterborn}
 }
+
+@inproceedings{caroli2010,
+  title={Robust and efficient Delaunay triangulations of points on or close to a sphere},
+  author={Caroli, Manuel and de Castro, Pedro MM and Loriot, S{\'e}bastien and Rouiller, Olivier and Teillaud, Monique and Wormser, Camille},
+  booktitle={International Symposium on Experimental Algorithms},
+  pages={462--473},
+  year={2010},
+  organization={Springer}
+}
+
+@article{wiggins1998,
+  title={Trapping and wiggling: elastohydrodynamics of driven microfilaments},
+  author={Wiggins, Chris H and Riveline, D and Ott, Albrecht and Goldstein, Raymond E},
+  journal={Biophysical journal},
+  volume={74},
+  number={2},
+  pages={1043--1060},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@book{landau1986,
+  title={Theory of elasticity: volume 7},
+  author={Landau, Lev Davidovich and Lif{\v{s}}ic, Evgenij M and Lifshitz, Evegnii Mikhailovich and Kosevich, Arnold Markovich and Pitaevskii, Lev Petrovich},
+  volume={7},
+  year={1986},
+  publisher={Elsevier}
+}
+
+@article{stokes1851,
+  title={On the effect of the internal friction of fluids on the motion of pendulums},
+  author={Stokes, George Gabriel and others},
+  journal={Transactions of the Cambridge Philosophical Society},
+  year={1851},
+  publisher={Pitt Press Cambridge}
+}
+
+@article{eicke1992,
+  title={Iteration methods for convexly constrained ill-posed problems in Hilbert space},
+  author={Eicke, Bertolt},
+  journal={Numerical Functional Analysis and Optimization},
+  volume={13},
+  number={5-6},
+  pages={413--429},
+  year={1992},
+  publisher={Taylor \& Francis}
+}
+
+@article{leadbeater1983,
+  title={Life-history and ultrastructure of a new marine species of Proterospongia (Choanoflagellida)},
+  author={Leadbeater, Barry SC},
+  journal={Journal of the Marine Biological Association of the United Kingdom},
+  volume={63},
+  number={1},
+  pages={135--160},
+  year={1983},
+  publisher={Cambridge University Press}
+}
+
+@article{leadbeater1977,
+  title={Observations on the life-history and ultrastructure of the marine choanoflagellate Choanoeca perplexa Ellis},
+  author={Leadbeater, Barry SC},
+  journal={Journal of the Marine Biological Association of the United Kingdom},
+  volume={57},
+  number={2},
+  pages={285--301},
+  year={1977},
+  publisher={Cambridge University Press}
+}
+
+@article{ellis1930,
+  title={Recent researches on the Choanoflagellata (Craspedomonadines) (freshwater and marine) with description of new genera and species},
+  author={Ellis, W. N.},
+  journal={Annales de la Soci\'et\'e royale zoologique de Belgique},
+  volume={60},
+  pages={49--88},
+  year={1930}
+}
+
+
+
