--- a/References/references.bib
+++ b/References/references.bib
@@ -205,5 +205,177 @@
   year={1930}
 }
 
+@article{goldstein2015,
+  title={Green algae as model organisms for biological fluid dynamics},
+  author={Goldstein, Raymond E},
+  journal={Annual review of fluid mechanics},
+  volume={47},
+  pages={343},
+  year={2015},
+  publisher={Europe PMC Funders}
+}
 
+@article{lang2002,
+  title={The closest unicellular relatives of animals},
+  author={Lang, BF and O'kelly, C and Nerad, T and Gray, MW and Burger, G},
+  journal={Current biology},
+  volume={12},
+  number={20},
+  pages={1773--1778},
+  year={2002},
+  publisher={Elsevier}
+}
 
+@article{james1871,
+  title={Note on the infusoria flagellata and the spongiae ciliatae},
+  author={James-Clark, Henry},
+  journal={Journal of Natural History},
+  volume={7},
+  number={39},
+  pages={247--248},
+  year={1871},
+  publisher={Taylor \& Francis}
+}
+
+@article{sebe2017,
+  title={The origin of Metazoa: a unicellular perspective},
+  author={Seb{\'e}-Pedr{\'o}s, Arnau and Degnan, Bernard M and Ruiz-Trillo, I{\~n}aki},
+  journal={Nature Reviews Genetics},
+  volume={18},
+  number={8},
+  pages={498--512},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{herron2008,
+  title={Evolution of complexity in the volvocine algae: transitions in individuality through Darwin's eye},
+  author={Herron, Matthew D and Michod, Richard E},
+  journal={Evolution: International Journal of Organic Evolution},
+  volume={62},
+  number={2},
+  pages={436--451},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{solari2006,
+  title={Multicellularity and the functional interdependence of motility and molecular transport},
+  author={Solari, Cristian A and Ganguly, Sujoy and Kessler, John O and Michod, Richard E and Goldstein, Raymond E},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={103},
+  number={5},
+  pages={1353--1358},
+  year={2006},
+  publisher={National Acad Sciences}
+}
+
+@article{berg1977,
+  title={Physics of chemoreception},
+  author={Berg, Howard C and Purcell, Edward M},
+  journal={Biophysical journal},
+  volume={20},
+  number={2},
+  pages={193--219},
+  year={1977},
+  publisher={Elsevier}
+}
+
+@misc{thibaut,
+  author = "Brunet, Thibaut",
+  year = "2022",
+  howpublished = "personal communication"
+}
+
+@article{king2004,
+  title={The unicellular ancestry of animal development},
+  author={King, Nicole},
+  journal={Developmental cell},
+  volume={7},
+  number={3},
+  pages={313--325},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{boraas1998,
+  title={Phagotrophy by a flagellate selects for colonial prey: a possible origin of multicellularity},
+  author={Boraas, Martin E and Seale, Dianne B and Boxhorn, Joseph E},
+  journal={Evolutionary Ecology},
+  volume={12},
+  number={2},
+  pages={153--164},
+  year={1998},
+  publisher={Springer}
+}
+
+@article{stanley1973,
+  title={An ecological theory for the sudden origin of multicellular life in the late Precambrian},
+  author={Stanley, Steven M},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={70},
+  number={5},
+  pages={1486--1489},
+  year={1973},
+  publisher={National Acad Sciences}
+}
+
+@article{dayel2011,
+  title={Cell differentiation and morphogenesis in the colony-forming choanoflagellate Salpingoeca rosetta},
+  author={Dayel, Mark J and Alegado, Rosanna A and Fairclough, Stephen R and Levin, Tera C and Nichols, Scott A and McDonald, Kent and King, Nicole},
+  journal={Developmental biology},
+  volume={357},
+  number={1},
+  pages={73--82},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{tuzet1963,
+  title={The phylogeny of sponges according to embryological, histological, and serological data, and their affinities with the Protozoa and the Cnidaria},
+  author={Tuzet, O},
+  journal={The lower metazoa. Comparative biology and phylogeny},
+  pages={129--148},
+  year={1963}
+}
+
+@article{saedeleer1930,
+  title={Recherches sur les choanocytes; l’origine des Spongiaires},
+  author={De Saedeleer, Henri},
+  journal={Annales de la Soci\'eti\'e royale zoologique de Belgique},
+  pages={16-21},
+  year={1930}
+}
+
+@article{katifori2010,
+  title={Foldable structures and the natural design of pollen grains},
+  author={Katifori, Eleni and Alben, Silas and Cerda, Enrique and Nelson, David R and Dumais, Jacques},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={107},
+  number={17},
+  pages={7635--7639},
+  year={2010},
+  publisher={National Acad Sciences}
+}
+
+@article{seung1988,
+  title={Defects in flexible membranes with crystalline order},
+  author={Seung, Hyunjune Sebastian and Nelson, David R},
+  journal={Physical Review A},
+  volume={38},
+  number={2},
+  pages={1005},
+  year={1988},
+  publisher={APS}
+}
+
+@article{kraft1994,
+  title={Algorithm 733: TOMP--Fortran modules for optimal control calculations},
+  author={Kraft, Dieter},
+  journal={ACM Transactions on Mathematical Software (TOMS)},
+  volume={20},
+  number={3},
+  pages={262--281},
+  year={1994},
+  publisher={ACM New York, NY, USA}
+}
