--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -164,7 +164,7 @@
 % *********************** Configure Draft Mode **********************************
 
 % Uncomment to disable figures in `draft'
-\setkeys{Gin}{draft=true}  % set draft to false to enable figures in `draft'
+% \setkeys{Gin}{draft=true}  % set draft to false to enable figures in `draft'
 
 % These options are active only during the draft mode
 % Default text is "Draft"
