--- a/References/references.bib
+++ b/References/references.bib
@@ -149,7 +149,7 @@
 
 @book{landau1986,
   title={Theory of elasticity: volume 7},
-  author={Landau, Lev Davidovich and Lif{\v{s}}ic, Evgenij M and Lifshitz, Evegnii Mikhailovich and Kosevich, Arnold Markovich and Pitaevskii, Lev Petrovich},
+  author={Landau, Lev Davidovich and Lifshitz, Evegnii Mikhailovich and Kosevich, Arnold Markovich and Pitaevskii, Lev Petrovich},
   volume={7},
   year={1986},
   publisher={Elsevier}
@@ -378,4 +378,356 @@
   pages={262--281},
   year={1994},
   publisher={ACM New York, NY, USA}
+}
+
+@article{helfrich1973,
+  title={Elastic properties of lipid bilayers: theory and possible experiments},
+  author={Helfrich, Wolfgang},
+  journal={Zeitschrift f{\"u}r Naturforschung c},
+  volume={28},
+  number={11-12},
+  pages={693--703},
+  year={1973},
+  publisher={De Gruyter}
+}
+
+@incollection{bauchau2009,
+  title={Euler-Bernoulli beam theory},
+  author={Bauchau, Oliver A and Craig, James I},
+  booktitle={Structural analysis},
+  pages={173--221},
+  year={2009},
+  publisher={Springer}
+}
+
+@INPROCEEDINGS{dahl2014,
+  author={Dahl, Vedrana A. and Dahl, Anders B. and Larsen, Rasmus},
+  booktitle={2014 2nd International Conference on 3D Vision}, 
+  title={Surface Detection Using Round Cut}, 
+  year={2014},
+  volume={2},
+  number={},
+  pages={82-89},
+  doi={10.1109/3DV.2014.60}}
+
+@article{sachdev1984,
+  title={Crystalline and fluid order on a random topography},
+  author={Sachdev, Subir and Nelson, David R},
+  journal={Journal of Physics C: Solid State Physics},
+  volume={17},
+  number={30},
+  pages={5473},
+  year={1984},
+  publisher={IOP Publishing}
+}
+
+@article{stewart2008,
+  title={Physiological heterogeneity in biofilms},
+  author={Stewart, Philip S and Franklin, Michael J},
+  journal={Nature Reviews Microbiology},
+  volume={6},
+  number={3},
+  pages={199--210},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
+@article{lewis2010,
+  title={Persister cells},
+  author={Lewis, Kim},
+  journal={Annual review of microbiology},
+  volume={64},
+  pages={357--372},
+  year={2010},
+  publisher={Annual Reviews}
+}
+
+@article{rittmann1980,
+  title={Model of steady-state-biofilm kinetics},
+  author={Rittmann, Bruce E and McCarty, Perry L},
+  journal={Biotechnology and bioengineering},
+  volume={22},
+  number={11},
+  pages={2343--2357},
+  year={1980},
+  publisher={Wiley Online Library}
+}
+
+@article{mah2001,
+  title={Mechanisms of biofilm resistance to antimicrobial agents},
+  author={Mah, Thien-Fah C and O'Toole, George A},
+  journal={Trends in microbiology},
+  volume={9},
+  number={1},
+  pages={34--39},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{green1981,
+  title={Mechanism of formation, ultrastructure, and function of the cytoplasmic bridge system during morphogenesis in Volvox.},
+  author={Green, Kathleen J and Viamontes, George I and Kirk, David L},
+  journal={The Journal of cell biology},
+  volume={91},
+  number={3},
+  pages={756--769},
+  year={1981}
+}
+
+@incollection{herron2015,
+  title={Volvocine algae: from simple to complex multicellularity},
+  author={Herron, Matthew D and Nedelcu, Aurora M},
+  booktitle={Evolutionary transitions to multicellular life},
+  pages={129--152},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{grosberg2007,
+  title={The evolution of multicellularity: a minor major transition?},
+  author={Grosberg, Richard K and Strathmann, Richard R},
+  journal={Annual Review of Ecology, Evolution, and Systematics},
+  pages={621--654},
+  year={2007},
+  publisher={JSTOR}
+}
+
+@article{woznica2016,
+  title={Bacterial lipids activate, synergize, and inhibit a developmental switch in choanoflagellates},
+  author={Woznica, Arielle and Cantley, Alexandra M and Beemelmanns, Christine and Freinkman, Elizaveta and Clardy, Jon and King, Nicole},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={113},
+  number={28},
+  pages={7894--7899},
+  year={2016},
+  publisher={National Acad Sciences}
+}
+
+@article{wetzel2018,
+  title={Predicted glycosyltransferases promote development and prevent spurious cell clumping in the choanoflagellate S. rosetta},
+  author={Wetzel, Laura A and Levin, Tera C and Hulett, Ryan E and Chan, Daniel and King, Grant A and Aldayafleh, Reef and Booth, David S and Sigg, Monika Abedin and King, Nicole},
+  journal={Elife},
+  volume={7},
+  pages={e41482},
+  year={2018},
+  publisher={eLife Sciences Publications Limited}
+}
+
+@article{hohn2015,
+  title={Dynamics of a Volvox embryo turning itself inside out},
+  author={H{\"o}hn, Stephanie and Honerkamp-Smith, Aurelia R and Haas, Pierre A and Trong, Philipp Khuc and Goldstein, Raymond E},
+  journal={Physical review letters},
+  volume={114},
+  number={17},
+  pages={178101},
+  year={2015},
+  publisher={APS}
+}
+
+@article{viamontes1977,
+  title={Cell shape changes and the mechanism of inversion in Volvox.},
+  author={Viamontes, George I and Kirk, David L},
+  journal={The Journal of cell biology},
+  volume={75},
+  number={3},
+  pages={719--730},
+  year={1977}
+}
+
+@article{claessen2014,
+  title={Bacterial solutions to multicellularity: a tale of biofilms, filaments and fruiting bodies},
+  author={Claessen, Dennis and Rozen, Daniel E and Kuipers, Oscar P and S{\o}gaard-Andersen, Lotte and Van Wezel, Gilles P},
+  journal={Nature Reviews Microbiology},
+  volume={12},
+  number={2},
+  pages={115--124},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{shapiro1988,
+  title={Bacteria as multicellular organisms},
+  author={Shapiro, James A},
+  journal={Scientific American},
+  volume={258},
+  number={6},
+  pages={82--89},
+  year={1988},
+  publisher={JSTOR}
+}
+
+@article{welch2001,
+  title={Cell behavior in traveling wave patterns of myxobacteria},
+  author={Welch, Roy and Kaiser, Dale},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={98},
+  number={26},
+  pages={14907--14912},
+  year={2001},
+  publisher={National Acad Sciences}
+}
+
+@article{zhang2012,
+  title={From individual cell motility to collective behaviors: insights from a prokaryote, Myxococcus xanthus},
+  author={Zhang, Yong and Ducret, Adrien and Shaevitz, Joshua and Mignot, T{\^a}m},
+  journal={FEMS microbiology reviews},
+  volume={36},
+  number={1},
+  pages={149--164},
+  year={2012},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{flores2010,
+  title={Compartmentalized function through cell differentiation in filamentous cyanobacteria},
+  author={Flores, Enrique and Herrero, Antonia},
+  journal={Nature Reviews Microbiology},
+  volume={8},
+  number={1},
+  pages={39--50},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{wilcox1973,
+  title={Pattern formation in the blue-green alga, Anabaena: I. Basic mechanisms},
+  author={Wilcox, Michael and Mitchison, GJ and Smith, RJ},
+  journal={Journal of cell science},
+  volume={12},
+  number={3},
+  pages={707--723},
+  year={1973},
+  publisher={Company of Biologists}
+}
+
+@article{michod2001,
+  title={Cooperation and conflict in the evolution of multicellularity},
+  author={Michod, Richard E and Roze, Denis},
+  journal={Heredity},
+  volume={86},
+  number={1},
+  pages={1--7},
+  year={2001},
+  publisher={Nature Publishing Group}
+}
+
+@article{rainey2010,
+  title={Cheats as first propagules: a new hypothesis for the evolution of individuality during the transition from single cells to multicellularity},
+  author={Rainey, Paul B and Kerr, Benjamin},
+  journal={BioEssays},
+  volume={32},
+  number={10},
+  pages={872--880},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@article{michod2003,
+  title={On the reorganization of fitness during evolutionary transitions in individuality},
+  author={Michod, Richard E and Nedelcu, Aurora M},
+  journal={Integrative and Comparative Biology},
+  volume={43},
+  number={1},
+  pages={64--73},
+  year={2003},
+  publisher={Oxford University Press}
+}
+
+@article{hammerschmidt2014,
+  title={Life cycles, fitness decoupling and the evolution of multicellularity},
+  author={Hammerschmidt, Katrin and Rose, Caroline J and Kerr, Benjamin and Rainey, Paul B},
+  journal={Nature},
+  volume={515},
+  number={7525},
+  pages={75--79},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{short2006,
+  title={Flows driven by flagella of multicellular organisms enhance long-range molecular transport},
+  author={Short, Martin B and Solari, Cristian A and Ganguly, Sujoy and Powers, Thomas R and Kessler, John O and Goldstein, Raymond E},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={103},
+  number={22},
+  pages={8315--8319},
+  year={2006},
+  publisher={National Acad Sciences}
+}
+
+@article{larsen1994,
+  title={The sponge pump},
+  author={Larsen, Poul Scheel and Riisg{\aa}d, Hans Ulrik},
+  journal={Journal of Theoretical Biology},
+  volume={168},
+  number={1},
+  pages={53--63},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{nielsen2008,
+  title={Six major steps in animal evolution: are we derived sponge larvae?},
+  author={Nielsen, Claus},
+  journal={Evolution \& development},
+  volume={10},
+  number={2},
+  pages={241--257},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{karpov1998,
+  title={Cytoskeleton structure and composition in choanoflagellates},
+  author={Karpov, Serglei A and Leadbeater, Barry SC},
+  journal={Journal of Eukaryotic Microbiology},
+  volume={45},
+  number={3},
+  pages={361--367},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+
+@article{bonner1998,
+  title={The origins of multicellularity},
+  author={Bonner, John Tyler},
+  journal={Integrative Biology: Issues, News, and Reviews: Published in Association with The Society for Integrative and Comparative Biology},
+  volume={1},
+  number={1},
+  pages={27--36},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+
+@article{kirk2005,
+  title={A twelve-step program for evolving multicellularity and a division of labor},
+  author={Kirk, David L},
+  journal={BioEssays},
+  volume={27},
+  number={3},
+  pages={299--310},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{lopez2010,
+  title={Biofilms},
+  author={L{\'o}pez, Daniel and Vlamakis, Hera and Kolter, Roberto},
+  journal={Cold Spring Harbor perspectives in biology},
+  volume={2},
+  number={7},
+  pages={a000398},
+  year={2010},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@article{tu2003,
+  title={Lipid membranes with free edges},
+  author={Tu, ZC and Ou-Yang, ZC},
+  journal={Physical Review E},
+  volume={68},
+  number={6},
+  pages={061915},
+  year={2003},
+  publisher={APS}
 }
