--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -2,7 +2,8 @@
 
 \begin{dedication} 
 
-I would like to dedicate this thesis to my loving parents \dots \mynote{dedicate to people!}
+I would like to dedicate this thesis to someone
+\mynote{dedicate to people!}
 
 \end{dedication}
 
