--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,8 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper,12pt,times,numbered,print,index,draft]{PhDThesisPSnPDF}
+%\documentclass[a4paper,12pt,times,numbered,print,index,draft]{PhDThesisPSnPDF}
+\documentclass[a4paper,12pt,times,numbered,print,index]{PhDThesisPSnPDF}
 
 % ******************************************************************************
 % ******************************* Class Options ********************************
@@ -124,7 +125,7 @@
 
 \listoffigures
 
-\listoftables
+% \listoftables
 
 % \printnomenclature[space] space can be set as 2em between symbol and description
 %\printnomenclature[3em]
@@ -176,7 +177,7 @@
 
 \begin{appendices} % Using appendices environment for more functunality
 
-%\include{Appendix1/appendix1}
+\include{Appendix1/appendix1}
 %\include{Appendix2/appendix2}
 
 \end{appendices}
