abstract and acknowledgements

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -1,11 +1,22 @@
 % ************************** Thesis Abstract *****************************
 % Use `abstract' as an option in the document class to print only the titlepage and the abstract.
 \begin{abstract}
-The newly discovered multicellular choanoflagellate Choanoeca flexa forms a curved sheet that undergoes a functional, light-triggered inversion. This change in orientation that allows the organism to reversibly switch between efficient swimming and feeding shapes provides an opportunity to study biological exploitation of geometry in an evolutionarily basal context. I sought to model the mechanics that produce this apparent bistability and the dynamics of the active transformation between the two states. 
+The newly discovered multicellular choanoflagella \textit{Choanoeca flexa} and its cousin \textit{Choanoeca perplexa} form colonies as curved sheets that can undergo a functional, light-triggered inversion.
+This change in orientation that allows the organism to reversibly switch between efficient swimming and feeding shapes provides an opportunity to study biological exploitation of geometry in an evolutionarily basal context. 
+I sought to model the mechanics that produce this apparent bistability and the dynamics of the active transformation between the two states. 
 
-In this work, I approach the modeling problem from complementary continuous and discrete mechanics perspectives. Since radial expansion and contraction at a given latitude require azimuthal stretching and shrinking, a one-dimensional filament model does not capture the energetic barriers encountered by the sheet during the transition. Using energy functional variation, I solve for the forces acting throughout the sheet and derive corresponding equilibrium shape equations. Both views establish that C. flexa inversion can be hindered in sufficiently large sheets by cell collars connecting adjacent cells stretching. 
-    
-Comparisons between the discrete model for C. flexa mechanics and previously published experimental results support that collar stretching at the edges interferes in sheet inversion. Treating the organism as a crystal lattice defined by cells and cell-cell interactions, we recognise that the graph degree of cells plays a substantial role in overall sheet curvature and ability to invert. 
-    
-My results suggest that the graph topology of the cell-cell interface network must accommodate inversion, particularly at the edge of the sheet. Future work should image C. flexa flipping and observe changes in connectivity that accompany the transition. My results link graph topology with a notion of surface curvature through established ideas in the theory of crystal structure.
+In this work, I approach the modeling problem from complementary continuous and discrete mechanics perspectives. 
+Since radial expansion and contraction at a given latitude require azimuthal stretching and shrinking, a one-dimensional filament model does not capture the energetic challenges encountered by the sheet during the transition. 
+Using energy functional variation, I write the sheet energy and write corresponding equilibrium shape equations, though they are too complex to treat analytically.
+
+A discrete model for \textit{C. flexa} colonies agrees with experimental evidence that collar stretching at sheet edges interferes in sheet inversion.
+Treating the organism as a crystall lattice defined by cells and cell-cell interactions, we recognise that the graph degree of cells substantially affects overall sheet curvature and the ability to invert.
+This finding agrees with the known geometric effects of topological defects in crystal lattices, where lattices must deform by buckling out of the plane to minimise their energy.
+Moreover, shape and inversion is dependent on the entire lattice topology.
+A lack or abundance of topological defects in a region may restrict sheet geometry on a large scale. 
+
+These results indicate that the topology of the cell-cell interface network must accommodate both colony bending and inversion.
+Moreover, it is clear that connection via collars is essential for sheet curvature by prescribing preferred mechanics at the cell body and shared interfaces.
+Future experimental work should image \textit{C. flexa} flipping and look for any changes in connectivity that enable the transition.
+
 \end{abstract}
