--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -2,8 +2,11 @@
 
 \begin{acknowledgements}      
 
+My work this year wold not have been possible without the support of those around me.
+My advisor, Ray, and the rest of the Goldstein lab took me in with open arms and offered incredible amounts of their scientific wisdom. 
+Out of this group, I am most indebted to Lloyd for listening to my many questions, stories, successes, and failures.
 
-And I would like to acknowledge ... \mynote{acknowledge people!}
-
+Throughout this year living abroad, several friends made me feel welcome and contributed to my unforgettable experience here, especially Nitin, Isaac, Guowei, Pavan, Jacob, and Andrew.
+Thanks also to my family and friends in the US, especially my parents, Sid, Dylan, Sarah, and Gabby: I'd have felt lost abroad without the many reminders of those waiting for me at home.
 
 \end{acknowledgements}
