--- a/thesis.tex
+++ b/thesis.tex
@@ -114,7 +114,7 @@
 
 \maketitle
 
-\include{Dedication/dedication}
+% \include{Dedication/dedication}
 \include{Declaration/declaration}
 \include{Acknowledgement/acknowledgement}
 \include{Abstract/abstract}
