computer draw figures

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -10,7 +10,7 @@ Since radial expansion and contraction at a given latitude require azimuthal str
 Using energy functional variation, I write the sheet energy and write corresponding equilibrium shape equations, though they are too complex to treat analytically.
 
 A discrete model for \textit{C. flexa} colonies agrees with experimental evidence that collar stretching at sheet edges interferes in sheet inversion.
-Treating the organism as a crystall lattice defined by cells and cell-cell interactions, we recognise that the graph degree of cells substantially affects overall sheet curvature and the ability to invert.
+Treating the organism as a crystal lattice defined by cells and cell-cell interactions, we recognise that the graph degree of cells substantially affects overall sheet curvature and the ability to invert.
 This finding agrees with the known geometric effects of topological defects in crystal lattices, where lattices must deform by buckling out of the plane to minimise their energy.
 Moreover, shape and inversion is dependent on the entire lattice topology.
 A lack or abundance of topological defects in a region may restrict sheet geometry on a large scale. 
