--- a/Appendix1/appendix1.tex
+++ b/Appendix1/appendix1.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../thesis.tex
 % ******************************* Thesis Appendix A ****************************
-\chapter{my first appendix} \label{apx:cts}
+\chapter{Continuous energy functional derivation} \label{apx:cts}
 
 \Cref{ch:2} expresses an integral to evaluate the energy density at a given point in terms of constants $a, b, c, d, e$. 
 \begin{align*}
