--- a/References/references.bib
+++ b/References/references.bib
@@ -731,3 +731,46 @@
   year={2003},
   publisher={APS}
 }
+
+@article{michod2006,
+  title={The group covariance effect and fitness trade-offs during evolutionary transitions in individuality},
+  author={Michod, Richard E},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={103},
+  number={24},
+  pages={9113--9117},
+  year={2006},
+  publisher={National Acad Sciences}
+}
+
+@article{gulli2019,
+  title={Evolution of altruistic cooperation among nascent multicellular organisms},
+  author={Gulli, Jordan G and Herron, Matthew D and Ratcliff, William C},
+  journal={Evolution},
+  volume={73},
+  number={5},
+  pages={1012--1024},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{naumann2019,
+  title={Spatial cell disparity in the colonial choanoflagellate Salpingoeca rosetta},
+  author={Naumann, Benjamin and Burkhardt, Pawel},
+  journal={Frontiers in cell and developmental biology},
+  volume={7},
+  pages={231},
+  year={2019},
+  publisher={Frontiers Media SA}
+}
+
+@article{laundon2019,
+  title={The architecture of cell differentiation in choanoflagellates and sponge choanocytes},
+  author={Laundon, Davis and Larson, Ben T and McDonald, Kent and King, Nicole and Burkhardt, Pawel},
+  journal={PLoS biology},
+  volume={17},
+  number={4},
+  pages={e3000226},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
