--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -41,7 +41,7 @@
 
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
-\advisor{Dr. R. E. Goldstein}
+\advisor{Dr. Raymond E. Goldstein}
      
 %% Advisor Role (optional) - Advisor (default) or leave empty
 % \advisorrole{Advisors: }
