--- a/References/references.bib
+++ b/References/references.bib
@@ -774,3 +774,89 @@
   year={2019},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+
+@article{ratcliff2012,
+  title={Experimental evolution of multicellularity},
+  author={Ratcliff, William C and Denison, R Ford and Borrello, Mark and Travisano, Michael},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={109},
+  number={5},
+  pages={1595--1600},
+  year={2012},
+  publisher={National Acad Sciences}
+}
+
+@article{brunet2017,
+  title={The origin of animal multicellularity and cell differentiation},
+  author={Brunet, Thibaut and King, Nicole},
+  journal={Developmental cell},
+  volume={43},
+  number={2},
+  pages={124--140},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{yanni2020,
+  title={Topological constraints in early multicellularity favor reproductive division of labor},
+  author={Yanni, David and Jacobeen, Shane and M{\'a}rquez-Zacar{\'\i}as, Pedro and Weitz, Joshua S and Ratcliff, William C and Yunker, Peter J},
+  journal={Elife},
+  volume={9},
+  pages={e54348},
+  year={2020},
+  publisher={eLife Sciences Publications Limited}
+}
+
+@article{cheng2020,
+  title={The evolution of germ--soma nuclear differentiation in eukaryotic unicells},
+  author={Cheng, Chao-Yin and Orias, Eduardo and Leu, Jun-Yi and Turkewitz, Aaron P},
+  journal={Current Biology},
+  volume={30},
+  number={10},
+  pages={R502--R510},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{larson1992,
+  title={Molecular phylogeny of the volvocine flagellates.},
+  author={Larson, Allan and Kirk, Marilyn M and Kirk, David L},
+  journal={Molecular Biology and Evolution},
+  volume={9},
+  number={1},
+  pages={85--105},
+  year={1992}
+}
+
+@article{solari2013,
+  title={A general allometric and life-history model for cellular differentiation in the transition to multicellularity},
+  author={Solari, Cristian A and Kessler, John O and Goldstein, Raymond E},
+  journal={The American Naturalist},
+  volume={181},
+  number={3},
+  pages={369--380},
+  year={2013},
+  publisher={University of Chicago Press Chicago, IL}
+}
+
+@article{kirk2001,
+  title={Germ--soma differentiation in Volvox},
+  author={Kirk, David L},
+  journal={Developmental biology},
+  volume={238},
+  number={2},
+  pages={213--223},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{solari2006a,
+  title={A hydrodynamics approach to the evolution of multicellularity: flagellar motility and germ-soma differentiation in volvocalean green algae},
+  author={Solari, Cristian A and Kessler, John O and Michod, Richard E},
+  journal={The American Naturalist},
+  volume={167},
+  number={4},
+  pages={537--554},
+  year={2006},
+  publisher={The University of Chicago Press}
+}
