revisions wrt to Alexander Morozov's comments

--- a/References/references.bib
+++ b/References/references.bib
@@ -860,3 +860,25 @@
   year={2006},
   publisher={The University of Chicago Press}
 }
+
+@article{andelman1994,
+  title={Phase transitions between vesicles and micelles driven by competing curvatures},
+  author={Andelman, D and Kozlov, MM and Helfrich, W},
+  journal={Europhysics Letters},
+  volume={25},
+  number={3},
+  pages={231},
+  year={1994},
+  publisher={IOP Publishing}
+}
+
+@article{seifert1997,
+  title={Configurations of fluid membranes and vesicles},
+  author={Seifert, Udo},
+  journal={Advances in physics},
+  volume={46},
+  number={1},
+  pages={13--137},
+  year={1997},
+  publisher={Taylor \& Francis}
+}
