Remove "icosphere" and clarify subdivided icosahedron

--- a/References/references.bib
+++ b/References/references.bib
@@ -882,3 +882,10 @@
   year={1997},
   publisher={Taylor \& Francis}
 }
+
+@book{cromwell1997,
+  title={Polyhedra},
+  author={Cromwell, Peter R},
+  year={1997},
+  publisher={Cambridge university press}
+}
